Add noop Panama Foreign benchmark